js if else for output & hover for menu

--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,5 @@ body{
 .dish-price { position: absolute; right: 16px; top: 0px; font-size: 26px; color: #e03c23; font-weight: 500;  }
 .well-block .dish-meta { width: 100%; }
 .well-block .dish-price { font-size: 26px; color: #e03c23; font-weight: 500; font-family: 'Zilla Slab', serif; position: inherit; }
+.menu-title:hover {border-bottom: 3px solid #e03c23; margin-bottom: 36px; padding-bottom: 10px;}
+.menu-content:hover{border-bottom: 1px solid #e03c23; margin-bottom: 30px;}
