--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,6 @@ body{
 .well-block .dish-price { font-size: 26px; color: #e03c23; font-weight: 500; font-family: 'Zilla Slab', serif; position: inherit; }
 .menu-title:hover {border-bottom: 3px solid #e03c23; margin-bottom: 36px; padding-bottom: 10px;}
 .menu-content:hover{border-bottom: 2px solid #e03c23; margin-bottom: 30px;}
+.toast-body{
+    display: none;
+}
